--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -3,8 +3,18 @@
 }
 
 <body>
-    <div style="margin-top:30px; margin-left:100px; margin-bottom:50px; min-height:200px">
+    <div "style="margin-top:30px; margin-left:100px; margin-bottom:50px; min-height:200px">
+        
         <div id="searchInputs">
+            <div id="jobCategoryDropdown" class="dropdown">
+                <text class="searchLabel">Job Category<br></text>
+                <div>
+                    <select id="titlesUl" class="form-control">
+                        <option value="">ALL</option>
+                    </select>
+                </div>
+            </div>
+
             <div id="titleDropdown" class="dropdown">
                 <text class="searchLabel">Title<br></text>
                 <div>
