changed Snoqualmie to Snohomish and id on the jobCategory Dropdown

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -9,14 +9,14 @@
             <div id="jobCategoryDropdown" class="dropdown">
                 <text class="searchLabel">Job Category<br></text>
                 <div>
-                    <select id="titlesUl" class="form-control">
+                    <select id="categoriesUl" class="form-control">
                         <option value="">ALL</option>
                     </select>
                 </div>
             </div>
 
             <div id="titleDropdown" class="dropdown">
-                <text class="searchLabel">Title<br></text>
+                <text class="searchLabel">Job Title<br></text>
                 <div>
                     <select id="titlesUl" class="form-control">
                         <option value="">ALL</option>
