changed html drop down from "Snoqualmie" to "Snohomish"

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                         <option value="YAK">YAKIMA</option>
                         <option value="VANC">VANCOUVER</option>
                         <option value="KING">KING</option>
-                        <option value="SNO">SNOQUALMIE</option>
+                        <option value="SNO">SNOHOMISH</option>
                     </select>
                 </div>
             </div>
