--- a/STEMInsightsApp/Views/Shared/_Layout.cshtml
+++ b/STEMInsightsApp/Views/Shared/_Layout.cshtml
@@ -85,6 +85,7 @@
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/utilities.js"></script>
     <script src="~/Scripts/home.js"></script>
+    <script src="~/Scripts/data_definition_modals.js"></script>
 
 
 </body>
