Removing inline styles, other style fixes
1. Made the body display in a center column
2. Positioned the "Career Insight" hexagon to match the WAStem site
3. Positioned the logo and top menu
4. Positioned the search and trends tabs/buttons
5. Positioned the drop-downs so that the drop downs and search button
appear on the same row
6. Improved styling of the "We found X records" message
7. Made results table headers bold
8. Moved all inline styles to Site.css
9. Formatted Site.css for consistency
10. Changed STEAM to STEM in the footer
11. Other minor style changes

--- a/STEMInsightsApp/Content/Site.css
+++ b/STEMInsightsApp/Content/Site.css
@@ -1,30 +1,33 @@
-﻿     html,
-     body {
-        padding-bottom: 20px;
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-        font-family:Helvetica,Arial,sans-serif;
-        font-size:9pt;
-      }
-
+﻿html,
+body {
+    padding-bottom: 20px;
+    height: 100%;
+    /* The html and body elements cannot have any padding or margin. */
+    font-family: Helvetica,Arial,sans-serif;
+    font-size: 9pt;
+    width: 1093px;
+    background-color: #ececec;
+    margin: 0 auto;
+}
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color: #fff;
+}
+
+#searchArea {
+    margin: 30px 0 50px 30px;
+    min-height: 200px;
 }
 
 .searchBtn {
-    background-color:green;
-    height:50px;
-    width:100px;
+    background-color: green;
+    height: 50px;
+    width: 100px;
     color: white;
-    font-style:oblique;
-}
-
-.results {
-    color: green;
-    font-size:large;
+    font-style: oblique;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -42,39 +45,34 @@ textarea {
 }
 
 .top-link {
-    color:#000000;
+    color: #000;
 }
 
 .bottom-link {
-    color:#ffffff;
+    color: #fff;
 }
 
-
 #copyright {
-    float:left;
+    float: left;
 }
 
 #footer-links {
-    float:right;
+    float: right;
+    padding-right: 50px;
 }
 
 /* Dropdown styles  */
 /********************/
 /* Dropdown Button */
 .dropbtn {
-    background-color: white;
+    background-color: #fff;
     padding: 16px;
     font-size: 16px;
     box-shadow: 2px 2px 2px 2px #4CAF50;
-    border-color: #4CAF50;
+    border-color: #4caf50;
     cursor: pointer;
     width: 160px;
     height: 20px;
-}
-
-/* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
-   
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -86,22 +84,21 @@ textarea {
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-    display:none;
+    display: none;
     position: absolute;
-    background-color: white;
+    background-color: #fff;
     min-width: 160px;
-    box-shadow: 2px 2px 2px 2px #4CAF50;
-    color:black;
-    border-color:green;
-    height:300px;
-    overflow:auto
+    box-shadow: 2px 2px 2px 2px #4caf50;
+    color: black;
+    border-color: green;
+    height: 300px;
+    overflow: auto;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
     display: inline-block;
 }
-
 
 /* Links inside the dropdown */
 .dropdown-content li {
@@ -113,14 +110,16 @@ textarea {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f1f1f1}
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
+}
 
 .seattle {
     position: relative;
     right: 0;
     bottom: 0;
     left: 0;
-    width:100%;
+    width: 100%;
 }
 
 .footer {
@@ -128,51 +127,98 @@ textarea {
     right: 0;
     bottom: 0;
     left: 0;
-    background-color:#5bc0de;
-    color:white;
-    height:60px;
+    background-color: #5bc0de;
+    color: white;
+    height: 60px;
 }
 
 .searchLabel {
-    font-weight:bold;
+    font-weight: bold;
     font-size: 10pt;
 }
 
 .search-links {
     position: relative;
     display: block;
-    top: 0;
-    left:24px;
     clear: both;
-    height: 30px;
+    height: 50px;
+    background-color: #fff;
+    padding-left: 30px;
 }
+
 .main-header {
-    position:relative;
-    top:0;
-    left:40px;
-    background-color:#ffffff;
-    height:130px;
-    display: inline-block;
-    white-space: nowrap;
-    min-width:100% !important
+    background-color: #fff;
+    height: 130px;
 }
+
 .searchLabel {
-    font-weight:bold;
-    font-size:10pt;
+    font-weight: bold;
+    font-size: 10pt;
 }
 
 #spinner {
     display: none;
+    width: 30px;
+    height: 30px;
 }
 
 .tbl-results {
-    font-size:9pt;
-    
+    font-size: 9pt;
 }
 /* MODALS */
 .modal-row {
     margin: 1em auto;
 }
+
 .glyphicon {
     cursor: pointer;
+}
+
+.results-table {
+    font-size: 8pt;
+    color: #000;
+}
+
+#navbar-container {
+    display: inline-block;
+    float: left;
+    margin-left: 75px;
+}
+
+#navbar-items {
+    padding-top: 25px;
+    padding-left: 245px;
+}
+
+#navbar-badge {
+    position: relative;
+    top: 0;
+    padding-right: 80px;
+    float: right;
+}
+
+#badge-image {
+    width: 130px;
+    height: 130px;
+    margin-top: -30px;
+}
+
+#footer-wastem {
+    float: left;
+    padding-left: 20px;
+}
+
+.results-title {
+    display: block;
+    font-weight: bold;
+    margin-top: 20px;
+}
+
+.results-table-row {
+    font-weight: bold;
+}
+
+.navbar-default {
+    background-color: #fff;
+    border: none;
 }
