--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -101,8 +101,8 @@
             </div>
         </div>
     </div>
-
-    <div "style="margin-top:30px; margin-left:100px; margin-bottom:50px; min-height:200px">
+    <!-- Search and result area -->
+    <div id="searchArea">
         
         <div id="searchInputs">
             <div id="jobCategoryDropdown" class="dropdown">
@@ -148,7 +148,7 @@
 
             <div id="search" class="dropdown">
                 <button id="searchBtn" class="btn btn-success">Search</button>
-                <img id="spinner" src="~/Content/images/spinner.gif"  style="width:30px; height:30px" />
+                <img id="spinner" src="~/Content/images/spinner.gif"/>
             </div>
 
         </div>
