--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -156,7 +156,7 @@
         <div id="searchResults" class="results">        
         </div>
     </div>
-
+        <script src="~/Scripts/wa.json"></script>
         <script src="~/Scripts/jquery-1.10.2.min.js"></script>
         <script src="~/Scripts/utilities.js"></script>
         <script src="~/Scripts/home.js"></script>
