hardcoded edu levels into index.cshtml

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -127,7 +127,16 @@
                 <text class="searchLabel">Educational Level<br></text>
                 <div>
                     <select id="levelsUl" class="form-control">
-                        <option value="">ALL</option>
+                        <option value="ALLEDU">ALL</option>
+                        <option value="BACH">Bachelor's degree</option>
+                        <option value="DOC">Doctoral or professional degree</option>
+                        <option value="HIGH">High school diploma or equivalent</option>
+                        <option value="COLL">Some college, no degree</option>
+                        <option value="POST">Postsecondary nondegree award</option>
+                        <option value="NOFOR">No formal educational credential</option>
+                        <option value="APP">Apprenticeship</option>
+                        <option value="MASTER">Master's degree</option>
+                        <option value="ASSC">Associate's degree</option>
                     </select>
                 </div>
             </div>
