hardcoding drop down values for Job category. need to fix alignment

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -110,7 +110,74 @@
                 <div>
                     <select id="categoriesUl" class="form-control">
                         <option value="">ALL</option>
-                    </select>
+                        <option value="">
+                            Architecture and Engineering Occupations
+                        </option>
+                        <option value="">
+                            Arts, Design, Entertainment, Sports, and Media Occupations
+                        </option>
+                        <option value="">
+                            Building and Grounds Cleaning and Maintenance Occupations
+                        </option>
+                        <option value="">
+                            Business and Financial Operations Occupations
+                        </option>
+                        <option value="">
+                            Community and Social Service Occupations
+                        </option>
+                        <option value="">
+                            Computer and Mathematical Occupations
+                        </option>
+                        <option value="">
+                            Construction and Extraction Occupations
+                        </option>
+                        <option value="">
+                            Educational Instruction and Library Occupations
+                        </option>
+                        <option value="">
+                            Farming, Fishing, and Forestry Occupations
+                        </option>
+                        <option value="">
+                            Food Preparation and Serving Related Occupations
+                        </option>
+                        <option value="">
+                            Healthcare Practitioners and Technical Occupations
+                        </option>
+                        <option value="">
+                            Healthcare Support Occupations
+                        </option>
+                        <option value="">
+                            Installation, Maintenance, and Repair Occupations
+                        </option>
+                        <option value="">
+                            Legal Occupations
+                        </option>
+                        <option value="">
+                            Life, Physical, and Social Science Occupations
+                        </option>
+                        <option value="">
+                            Management Occupations
+                        </option>
+                        <option value="">
+                            Military Specific Occupations
+                        </option>
+                        <option value="">
+                            Office and Administrative Support Occupations
+                        </option>
+                        <option value="">
+                            Personal Care and Service Occupations
+                        </option>
+                        <option value="">
+                            Production Occupations
+                        </option>
+                        <option value="">
+                            Protective Service Occupations
+                        </option>
+                        <option value="">
+                            Sales and Related Occupations
+                        </option>
+                        <option value="">Transportation and Material Moving Occupations</option>
+</select>
                 </div>
             </div>
 
@@ -129,7 +196,7 @@
                     <select id="levelsUl" class="form-control">
                         <option value="ALLEDU">ALL</option>
                         <option value="BACH">Bachelor's degree</option>
-                        <option value="DOC">Doctoral or professional degree</option>
+                        <option value="DOC">Doctoral or Professional degree</option>
                         <option value="HIGH">High school diploma or equivalent</option>
                         <option value="COLL">Some college, no degree</option>
                         <option value="POST">Postsecondary nondegree award</option>
