added new json file and implemented search by title

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -165,6 +165,7 @@
         <div id="searchResults" class="results">        
         </div>
     </div>
+        <script src="~/Scripts/allCounties.json"></script>
         <script src="~/Scripts/wa.json"></script>
         <script src="~/Scripts/jquery-3.1.1.min.js"></script>
         <script src="~/Scripts/utilities.js"></script>
