--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -109,74 +109,74 @@
                 <text class="searchLabel">Job Category<br></text>
                 <div>
                     <select id="categoriesUl" class="form-control">
-                        <option value="">ALL</option>
-                        <option value="">
+                        <option value="ALL">ALL</option>
+                        <option value="ARCH">
                             Architecture and Engineering Occupations
                         </option>
-                        <option value="">
+                        <option value="ARTS">
                             Arts, Design, Entertainment, Sports, and Media Occupations
                         </option>
-                        <option value="">
+                        <option value="BUILD">
                             Building and Grounds Cleaning and Maintenance Occupations
                         </option>
-                        <option value="">
+                        <option value="BUSI">
                             Business and Financial Operations Occupations
                         </option>
-                        <option value="">
+                        <option value="COMM">
                             Community and Social Service Occupations
                         </option>
-                        <option value="">
+                        <option value="COMP">
                             Computer and Mathematical Occupations
                         </option>
-                        <option value="">
+                        <option value="CONST">
                             Construction and Extraction Occupations
                         </option>
-                        <option value="">
+                        <option value="EDUC">
                             Educational Instruction and Library Occupations
                         </option>
-                        <option value="">
+                        <option value="FARM">
                             Farming, Fishing, and Forestry Occupations
                         </option>
-                        <option value="">
+                        <option value="FOOD">
                             Food Preparation and Serving Related Occupations
                         </option>
-                        <option value="">
+                        <option value="HEAL">
                             Healthcare Practitioners and Technical Occupations
                         </option>
-                        <option value="">
+                        <option value="HSUP">
                             Healthcare Support Occupations
                         </option>
-                        <option value="">
+                        <option value="INST">
                             Installation, Maintenance, and Repair Occupations
                         </option>
-                        <option value="">
+                        <option value="LEGA">
                             Legal Occupations
                         </option>
-                        <option value="">
+                        <option value="LIFE">
                             Life, Physical, and Social Science Occupations
                         </option>
-                        <option value="">
+                        <option value="MANG">
                             Management Occupations
                         </option>
-                        <option value="">
+                        <option value="MILI">
                             Military Specific Occupations
                         </option>
-                        <option value="">
+                        <option value="OFFC">
                             Office and Administrative Support Occupations
                         </option>
-                        <option value="">
+                        <option value="PERS">
                             Personal Care and Service Occupations
                         </option>
-                        <option value="">
+                        <option value="PROD">
                             Production Occupations
                         </option>
-                        <option value="">
+                        <option value="PRTC">
                             Protective Service Occupations
                         </option>
-                        <option value="">
+                        <option value="SALE">
                             Sales and Related Occupations
                         </option>
-                        <option value="">Transportation and Material Moving Occupations</option>
+                        <option value="TRANS">Transportation and Material Moving Occupations</option>
 </select>
                 </div>
             </div>
