adding job search for 'all' job title

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -185,7 +185,7 @@
                 <text class="searchLabel">Job Title<br></text>
                 <div>
                     <select id="titlesUl" class="form-control">
-                        <option value="">ALL</option>
+                        <option value="ALL">ALL</option>
                     </select>
                 </div>
             </div>
