--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -195,15 +195,15 @@
                 <div>
                     <select id="levelsUl" class="form-control">
                         <option value="ALLEDU">ALL</option>
-                        <option value="BACH">Bachelor's degree</option>
-                        <option value="DOC">Doctoral or Professional degree</option>
-                        <option value="HIGH">High school diploma or equivalent</option>
-                        <option value="COLL">Some college, no degree</option>
-                        <option value="POST">Postsecondary nondegree award</option>
-                        <option value="NOFOR">No formal educational credential</option>
-                        <option value="APP">Apprenticeship</option>
-                        <option value="MASTER">Master's degree</option>
-                        <option value="ASSC">Associate's degree</option>
+                        <option value="Bachelor's degree">Bachelor's degree</option>
+                        <option value="Doctoral or Professional degree">Doctoral or Professional degree</option>
+                        <option value="High school diploma or equivalent">High school diploma or equivalent</option>
+                        <option value="Some college, no degree">Some college, no degree</option>
+                        <option value="Postsecondary nondegree award">Postsecondary nondegree award</option>
+                        <option value="No formal educational credential">No formal educational credential</option>
+                        <option value="Apprenticeship">Apprenticeship</option>
+                        <option value="Master's degree">Master's degree</option>
+                        <option value="Associate's degree">Associate's degree</option>
                     </select>
                 </div>
             </div>
