adding county search, fixing ed level search in utilities.js. Still reading from wa.json and allCounties.json

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -194,7 +194,7 @@
                 <text class="searchLabel">Educational Level<br></text>
                 <div>
                     <select id="levelsUl" class="form-control">
-                        <option value="ALLEDU">ALL</option>
+                        <option value="ALL">ALL</option>
                         <option value="Bachelor's degree">Bachelor's degree</option>
                         <option value="Doctoral or Professional degree">Doctoral or Professional degree</option>
                         <option value="High school diploma or equivalent">High school diploma or equivalent</option>
