bug fixes, and rolling back to accessing data from the database.

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -110,7 +110,7 @@
                 <div>
                     <select id="categoriesUl" class="form-control">
                         <option value="ALL">ALL</option>
-                        <option value="Architecture and Engineering Occupations">
+                        @*<option value="Architecture and Engineering Occupations">
                             Architecture and Engineering Occupations
                         </option>
                         <option value="Arts, Design, Entertainment, Sports, and Media Occupations">
@@ -176,8 +176,8 @@
                         <option value="Sales and Related Occupations">
                             Sales and Related Occupations
                         </option>
-                        <option value="Transportation and Material Moving Occupations">Transportation and Material Moving Occupations</option>
-</select>
+                        <option value="Transportation and Material Moving Occupations">Transportation and Material Moving Occupations</option>*@
+                    </select>
                 </div>
             </div>
 
@@ -194,7 +194,7 @@
                 <text class="searchLabel">Educational Level<br></text>
                 <div>
                     <select id="levelsUl" class="form-control">
-                        <option value="ALL">ALL</option>
+                        @*<option value="ALL">ALL</option>
                         <option value="Bachelor's degree">Bachelor's degree</option>
                         <option value="Doctoral or Professional degree">Doctoral or Professional degree</option>
                         <option value="High school diploma or equivalent">High school diploma or equivalent</option>
@@ -203,7 +203,7 @@
                         <option value="No formal educational credential">No formal educational credential</option>
                         <option value="Apprenticeship">Apprenticeship</option>
                         <option value="Master's degree">Master's degree</option>
-                        <option value="Associate's degree">Associate's degree</option>
+                        <option value="Associate's degree">Associate's degree</option>*@
                     </select>
                 </div>
             </div>
