--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -109,74 +109,7 @@
                 <text class="searchLabel">Job Category<br></text>
                 <div>
                     <select id="categoriesUl" class="form-control">
-                        <option value="ALL">ALL</option>
-                        @*<option value="Architecture and Engineering Occupations">
-                            Architecture and Engineering Occupations
-                        </option>
-                        <option value="Arts, Design, Entertainment, Sports, and Media Occupations">
-                            Arts, Design, Entertainment, Sports, and Media Occupations
-                        </option>
-                        <option value="Building and Grounds Cleaning and Maintenance Occupations">
-                            Building and Grounds Cleaning and Maintenance Occupations
-                        </option>
-                        <option value="Business and Financial Operations Occupations">
-                            Business and Financial Operations Occupations
-                        </option>
-                        <option value="Community and Social Service Occupations">
-                            Community and Social Service Occupations
-                        </option>
-                        <option value="Computer and Mathematical Occupations">
-                            Computer and Mathematical Occupations
-                        </option>
-                        <option value="Construction and Extraction Occupations">
-                            Construction and Extraction Occupations
-                        </option>
-                        <option value="Educational Instruction and Library Occupations">
-                            Educational Instruction and Library Occupations
-                        </option>
-                        <option value="Farming, Fishing, and Forestry Occupations">
-                            Farming, Fishing, and Forestry Occupations
-                        </option>
-                        <option value="Food Preparation and Serving Related Occupations">
-                            Food Preparation and Serving Related Occupations
-                        </option>
-                        <option value="Healthcare Practitioners and Technical Occupations">
-                            Healthcare Practitioners and Technical Occupations
-                        </option>
-                        <option value="Healthcare Support Occupations">
-                            Healthcare Support Occupations
-                        </option>
-                        <option value="Installation, Maintenance, and Repair Occupations">
-                            Installation, Maintenance, and Repair Occupations
-                        </option>
-                        <option value="Legal Occupations">
-                            Legal Occupations
-                        </option>
-                        <option value="Life, Physical, and Social Science Occupations">
-                            Life, Physical, and Social Science Occupations
-                        </option>
-                        <option value="Management Occupations">
-                            Management Occupations
-                        </option>
-                        <option value="Military Specific Occupations">
-                            Military Specific Occupations
-                        </option>
-                        <option value="Office and Administrative Support Occupations">
-                            Office and Administrative Support Occupations
-                        </option>
-                        <option value="Personal Care and Service Occupations">
-                            Personal Care and Service Occupations
-                        </option>
-                        <option value="Production Occupations">
-                            Production Occupations
-                        </option>
-                        <option value="Protective Service Occupations">
-                            Protective Service Occupations
-                        </option>
-                        <option value="Sales and Related Occupations">
-                            Sales and Related Occupations
-                        </option>
-                        <option value="Transportation and Material Moving Occupations">Transportation and Material Moving Occupations</option>*@
+                        <option value="">ALL</option>
                     </select>
                 </div>
             </div>
