--- a/STEMInsightsApp/Views/Home/StemInsights.cshtml
+++ b/STEMInsightsApp/Views/Home/StemInsights.cshtml
@@ -4,10 +4,14 @@
 <div id="chart">
 
 </div>
+@*<svg x="600" y="21" id="plot"></svg>*@
 <div id="searchResults" class="results">
 </div>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/d3.min.js"></script>
+
+<script src="~/Scripts/scatterPlot.json"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="~/Scripts/jquery-3.1.1.min.js"></script>
+
 <script src="~/Scripts/utilities.js"></script>
-<script src="~/Scripts/bubbleChart.js">
-    </script>
+<script src="~/Scripts/bubbleChart.js"></script>
+<script src="~/Scripts/scatterplot.js"></script>
