--- a/STEMInsightsApp/Views/Shared/_Layout.cshtml
+++ b/STEMInsightsApp/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
-    @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/Site.css")
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
