ALL to empty string

--- a/STEMInsightsApp/Views/Home/Index.cshtml
+++ b/STEMInsightsApp/Views/Home/Index.cshtml
@@ -118,7 +118,7 @@
                 <text class="searchLabel">Job Title<br></text>
                 <div>
                     <select id="titlesUl" class="form-control">
-                        <option value="ALL">ALL</option>
+                        <option value="">ALL</option>
                     </select>
                 </div>
             </div>
@@ -127,8 +127,8 @@
                 <text class="searchLabel">Educational Level<br></text>
                 <div>
                     <select id="levelsUl" class="form-control">
-                        @*<option value="ALL">ALL</option>
-                        <option value="Bachelor's degree">Bachelor's degree</option>
+                        <option value="">ALL</option>
+                        @*<option value="Bachelor's degree">Bachelor's degree</option>
                         <option value="Doctoral or Professional degree">Doctoral or Professional degree</option>
                         <option value="High school diploma or equivalent">High school diploma or equivalent</option>
                         <option value="Some college, no degree">Some college, no degree</option>
