put json into scatterPlot.js

--- a/STEMInsightsApp/Views/Home/StemInsights.cshtml
+++ b/STEMInsightsApp/Views/Home/StemInsights.cshtml
@@ -8,7 +8,7 @@
 <div id="searchResults" class="results">
 </div>
 
-<script src="~/Scripts/scatterPlot.json"></script>
+@*<script src="~/Views/scatterPlot.json"></script>*@
 <script src="https://d3js.org/d3.v3.min.js"></script>
 <script src="~/Scripts/jquery-3.1.1.min.js"></script>
 
